--- a/Template/.settings/org.eclipse.cdt.core.prefs
+++ b/Template/.settings/org.eclipse.cdt.core.prefs
@@ -4,3 +4,8 @@ doxygen/doxygen_use_javadoc_tags=true
 doxygen/doxygen_use_pre_tag=false
 doxygen/doxygen_use_structural_commands=false
 eclipse.preferences.version=1
+environment/project/com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1260216446/RootDir/delimiter=\:
+environment/project/com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1260216446/RootDir/operation=replace
+environment/project/com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1260216446/RootDir/value=${PWD}/..
+environment/project/com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1260216446/append=true
+environment/project/com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1260216446/appendContributed=true
